--- a/PhotoSharingDemo/war/WEB-INF/web.xml
+++ b/PhotoSharingDemo/war/WEB-INF/web.xml
@@ -56,6 +56,16 @@
     <servlet-name>TrendingCronServlet</servlet-name>
     <servlet-class>com.google.cloud.demo.TrendingCronServlet</servlet-class>
   </servlet>
+  
+  <servlet>
+    <servlet-name>SetCronTimeServlet</servlet-name>
+    <servlet-class>com.google.cloud.demo.SetCronTimeServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>SetCronTimeServlet</servlet-name>
+    <url-pattern>/rate</url-pattern>
+  </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>TrendingCronServlet</servlet-name>
@@ -115,6 +125,9 @@
   <!-- Default page to serve -->
   <welcome-file-list>
     <welcome-file>photofeed.jsp</welcome-file>
+<!--    
+    <welcome-file>Login.html</welcome-file>
+ -->    
   </welcome-file-list>
 
   <servlet>
@@ -133,7 +146,14 @@
 
   <security-constraint>
     <web-resource-collection>
-      <url-pattern>/*</url-pattern>
+ <!--      
+ 	<url-pattern>/*</url-pattern>
+-->
+ 	<url-pattern>/create</url-pattern>
+    <url-pattern>/manage</url-pattern>
+    <url-pattern>/post</url-pattern>
+    <url-pattern>/cover</url-pattern>
+    <url-pattern>/upload</url-pattern> 
     </web-resource-collection>
     <auth-constraint>
       <role-name>*</role-name>
